--- a/exer3/src/index.html
+++ b/exer3/src/index.html
@@ -10,7 +10,8 @@
 
     <nav class="bg-white shadow-md py-4 px-6 fixed top-0 w-full z-10">
       <div class="container mx-auto flex justify-between items-center">
-        <a href="#" class="text-2xl font-bold text-gray-800">Your Website</a>
+        <a href="#" class="text-2xl font-bold text-gray-800"><img style="height: 40px; padding: 0px;" src="./img/google.png"></a>
+      
         <ul class="flex items-center">
           <li><a href="#" class="px-3 py-2 rounded-md text-gray-500 hover:bg-gray-100 hover:text-gray-700">Home</a></li>
           <li><a href="#" class="px-3 py-2 rounded-md text-gray-500 hover:bg-gray-100 hover:text-gray-700">About</a></li>
@@ -19,15 +20,14 @@
       </div>
     </nav>
   
-    <main class="container mx-auto mt-16 px-4">
+    <main class="container mt-16 mx-auto">       
       <h1 class="text-3xl font-bold mb-4">Your Page Content</h1>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam faucibus sapien eu neque sagittis, ut ullamcorper lectus condimentum.</p>
     </main>
   
     <footer class="bg-gray-800 text-white py-4 px-6 fixed bottom-0 w-full">
       <div class="container mx-auto flex items-center justify-between">
-        <p class="text-sm">Copyright &copy; 2024 Your Website</p>
-        <a href="#" class="text-white hover:text-gray-300">Contact Us</a>
+        <p class="text-sm">Copyright &copy; 2024 Advait Sepuri</p>
       </div>
     </footer>
   
