--- a/exer3/src/index.html
+++ b/exer3/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home</title>
     <link rel="stylesheet" href="output.css">
 </head>
 <body class="bg-gray-100 font-sans antialiased">
@@ -11,13 +11,16 @@
     
     <nav class="bg-white shadow-md py-4 px-6 fixed top-0 w-full z-10">
       <div class="container mx-auto flex justify-between items-center">
-        <a href="#" class="text-2xl font-bold text-gray-800"><img style="height: 50px; padding: 0px;" src="./img/google_icon.webp"></a>
+        <img style="height: 50px; padding: 0px;" src="./img/google_icon.webp">
       
         <ul class="flex items-center">
-          <li><a href="#" class="px-3 py-2 rounded-md text-gray-500 hover:bg-gray-100 hover:text-gray-700">Home</a></li>
-          <li><a href="#" class="px-3 py-2 rounded-md text-gray-500 hover:bg-gray-100 hover:text-gray-700">About</a></li>
+          <li><a href="index.html" class="px-3 py-2 rounded-md text-gray-500 hover:bg-gray-100 hover:text-gray-700">Home</a></li>
+          <li><a href="about.html" class="px-3 py-2 rounded-md text-gray-500 hover:bg-gray-100 hover:text-gray-700">About</a></li>
           <li><a href="#" class="px-3 py-2 rounded-md text-gray-500 hover:bg-gray-100 hover:text-gray-700">Contact</a></li>
+          <li></li>
         </ul>
+
+        <img style="height: 60px; width: 60px; padding-left: 0px; border-radius: 50%;" src="./img/profile.jpg">
       </div>
     </nav>
   
