--- a/exer3/src/about.html
+++ b/exer3/src/about.html
@@ -14,18 +14,30 @@
             <img style="height: 50px; padding: 0px;" src="./img/google_icon.webp">
         
             <ul class="flex items-center">
-            <li><a href="index.html" class="px-3 py-2 rounded-md text-gray-500 hover:bg-gray-100 hover:text-gray-700">Home</a></li>
-            <li><a href="about.html" class="px-3 py-2 rounded-md text-gray-500 hover:bg-gray-100 hover:text-gray-700">About</a></li>
-            <li><a href="#" class="px-3 py-2 rounded-md text-gray-500 hover:bg-gray-100 hover:text-gray-700">Contact</a></li>
-            <li></li>
+                <li><a href="index.html" class="px-3 py-2 rounded-md text-gray-500 hover:bg-gray-100 hover:text-gray-700">Home</a></li>
+                <li><a href="about.html" class="px-3 py-2 rounded-md text-gray-500 hover:bg-gray-100 hover:text-gray-700">About</a></li>
+                <li><a href="#" class="px-3 py-2 rounded-md text-gray-500 hover:bg-gray-100 hover:text-gray-700">Contact</a></li>
             </ul>
 
             <img style="height: 60px; width: 60px; padding-left: 0px; border-radius: 50%;" src="./img/profile.jpg">
         </div>
     </nav>
   
+    <main style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">
+        <div style="text-align: center; padding-bottom: 10%;">
+          <div style="background-color: rgb(95, 93, 93); width: 900px; height: 80px; padding-left: 2%; border-radius: 10px; display: block; text-align: left; font-size: 50px; color: white;">Who is Advait Sepuri?</div>
+        </div>
+        <div style="display: flex;">
+            <div style="display: flex; flex-direction: column;">
+                <div style="background-color:black; height: 50px; width: 50px;"></div>
+                <div style="background-color:black; height: 50px; width: 50px;"></div>
+                <div style="background-color:black; height: 50px; width: 50px;"></div>
+            </div>
+            <div style="background-color: rgb(95, 93, 93); width: 90px; height: 80px; padding-left: 2%; border-radius: 10px; display: block; text-align: left; font-size: 50px; color: white;"></div>
+        </div>
+    </main>
+      
   
-
     <footer class="bg-gray-800 text-white py-4 px-6 fixed bottom-0 w-full">
       <div class="container mx-auto flex items-center justify-between">
         <p class="text-sm">Copyright &copy; 2024 Advait Sepuri</p>
