About Page Containers

--- a/exer3/src/about.html
+++ b/exer3/src/about.html
@@ -23,17 +23,17 @@
         </div>
     </nav>
   
-    <main style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">
-        <div style="text-align: center; padding-bottom: 10%;">
+    <main style="padding-top: 7%;">
+        <div style="text-align: center; padding-bottom: 5%; display: flex; justify-content: center;">
           <div style="background-color: rgb(95, 93, 93); width: 900px; height: 80px; padding-left: 2%; border-radius: 10px; display: block; text-align: left; font-size: 50px; color: white;">Who is Advait Sepuri?</div>
         </div>
-        <div style="display: flex;">
+        <div style="display: flex; justify-content: space-evenly;">
             <div style="display: flex; flex-direction: column;">
-                <div style="background-color:black; height: 50px; width: 50px;"></div>
-                <div style="background-color:black; height: 50px; width: 50px;"></div>
-                <div style="background-color:black; height: 50px; width: 50px;"></div>
+                <div style="background-color:black; height: 150px; width: 900px; margin-bottom: 20px; border-radius: 15px;"></div>
+                <div style="background-color:black; height: 150px; width: 900px; margin-bottom: 20px; border-radius: 15px;"></div>
+                <div style="background-color:black; height: 150px; width: 900px; margin-bottom: 20px; border-radius: 15px;"></div>
             </div>
-            <div style="background-color: rgb(95, 93, 93); width: 90px; height: 80px; padding-left: 2%; border-radius: 10px; display: block; text-align: left; font-size: 50px; color: white;"></div>
+            <div style="background-color: rgb(95, 93, 93); width: 400px; height: 500px; border-radius: 15px; display: block; font-size: 50px; color: white;"></div>
         </div>
     </main>
       
