--- a/exer3/src/about.html
+++ b/exer3/src/about.html
@@ -25,15 +25,26 @@
   
     <main style="padding-top: 7%;">
         <div style="text-align: center; padding-bottom: 5%; display: flex; justify-content: center;">
-          <div style="background-color: rgb(95, 93, 93); width: 900px; height: 80px; padding-left: 2%; border-radius: 10px; display: block; text-align: left; font-size: 50px; color: white;">Who is Advait Sepuri?</div>
+          <div style="background-color: rgb(95, 93, 93); width: 900px; height: 80px; padding-left: 2%; border-radius: 10px; display: block; text-align: center; font-size: 50px; color: white;">Who is Advait Sepuri?</div>
         </div>
         <div style="display: flex; justify-content: space-evenly;">
             <div style="display: flex; flex-direction: column;">
-                <div style="background-color:black; height: 150px; width: 900px; margin-bottom: 20px; border-radius: 15px;"></div>
-                <div style="background-color:black; height: 150px; width: 900px; margin-bottom: 20px; border-radius: 15px;"></div>
-                <div style="background-color:black; height: 150px; width: 900px; margin-bottom: 20px; border-radius: 15px;"></div>
+                <div style="background-color:black; height: 150px; width: 900px; margin-bottom: 20px; border-radius: 15px; display: flex; flex-direction: column; padding-top: 10px; padding-left: 10px;">
+                    <p style="color: white; font-size: xx-large; font-weight: bold;">Advait likes too...</p>
+                    <p style="color: gray">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Purus ut faucibus pulvinar elementum integer enim neque volutpat. Hendrerit gravida rutrum quisque non tellus. In massa tempor nec feugiat nisl pretium. Cursus risus at ultrices mi tempus imperdiet nulla malesuada.                
+                </div>
+                <div style="background-color:black; height: 150px; width: 900px; margin-bottom: 20px; border-radius: 15px; display: flex; flex-direction: column; padding-top: 10px; padding-left: 10px;">
+                    <p style="color: white; font-size: xx-large; font-weight: bold;">Advait likes too...</p>
+                    <p style="color: gray">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Purus ut faucibus pulvinar elementum integer enim neque volutpat. Hendrerit gravida rutrum quisque non tellus. In massa tempor nec feugiat nisl pretium. Cursus risus at ultrices mi tempus imperdiet nulla malesuada.                
+                </div>
+                <div style="background-color:black; height: 150px; width: 900px; margin-bottom: 20px; border-radius: 15px; display: flex; flex-direction: column; padding-top: 10px; padding-left: 10px;">
+                    <p style="color: white; font-size: xx-large; font-weight: bold;">Advait likes too...</p>
+                    <p style="color: gray">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Purus ut faucibus pulvinar elementum integer enim neque volutpat. Hendrerit gravida rutrum quisque non tellus. In massa tempor nec feugiat nisl pretium. Cursus risus at ultrices mi tempus imperdiet nulla malesuada.                
+                </div>
             </div>
-            <div style="background-color: rgb(95, 93, 93); width: 400px; height: 500px; border-radius: 15px; display: block; font-size: 50px; color: white;"></div>
+            <div style="background-color: rgb(95, 93, 93); width: 400px; height: 500px; border-radius: 15px; display: flex; flex-direction: column; font-size: 50px; color: white;">
+                
+            </div>
         </div>
     </main>
       
