--- a/exer3/src/about.html
+++ b/exer3/src/about.html
@@ -42,8 +42,10 @@
                     <p style="color: gray">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Purus ut faucibus pulvinar elementum integer enim neque volutpat. Hendrerit gravida rutrum quisque non tellus. In massa tempor nec feugiat nisl pretium. Cursus risus at ultrices mi tempus imperdiet nulla malesuada.                
                 </div>
             </div>
-            <div style="background-color: rgb(95, 93, 93); width: 400px; height: 500px; border-radius: 15px; display: flex; flex-direction: column; font-size: 50px; color: white;">
-                
+            
+            <div style="background-color: rgb(95, 93, 93); width: 400px; height: 500px; border-radius: 15px; display: flex; flex-direction: column; font-size: 50px; color: white; align-items: center; padding-top: 1%; padding-bottom: 2%; padding-left: 2%; padding-right: 2%;">
+                <img src="/exer3/src/img/New_York.jpg" style="height: 50%; width:50%; border-radius: 5%; padding-bottom: 2%;">
+                <p style="color: black; font-size: 17px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Purus ut faucibus pulvinar elementum integer enim neque volutpat. Hendrerit gravida rutrum quisque non tellus. In massa tempor nec feugiat nisl pretium. Cursus risus at ultrices mi tempus imperdiet nulla malesuada.</p>
             </div>
         </div>
     </main>
