--- a/exer3/src/about.html
+++ b/exer3/src/about.html
@@ -16,7 +16,7 @@
             <ul class="flex items-center">
                 <li><a href="index.html" class="px-3 py-2 rounded-md text-gray-500 hover:bg-gray-100 hover:text-gray-700">Home</a></li>
                 <li><a href="about.html" class="px-3 py-2 rounded-md text-gray-500 hover:bg-gray-100 hover:text-gray-700">About</a></li>
-                <li><a href="#" class="px-3 py-2 rounded-md text-gray-500 hover:bg-gray-100 hover:text-gray-700">Contact</a></li>
+                <li><a href="mailto:advaitsepuri@gmail.com" class="px-3 py-2 rounded-md text-gray-500 hover:bg-gray-100 hover:text-gray-700">Contact</a></li>
             </ul>
 
             <img style="height: 60px; width: 60px; padding-left: 0px; border-radius: 50%;" src="./img/profile.jpg">
@@ -45,7 +45,7 @@
             
             <div style="background-color: rgb(95, 93, 93); width: 400px; height: 500px; border-radius: 15px; display: flex; flex-direction: column; font-size: 50px; color: white; align-items: center; padding-top: 1%; padding-bottom: 2%; padding-left: 2%; padding-right: 2%;">
                 <img src="/exer3/src/img/New_York.jpg" style="height: 50%; width:50%; border-radius: 5%; padding-bottom: 2%;">
-                <p style="color: black; font-size: 17px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Purus ut faucibus pulvinar elementum integer enim neque volutpat. Hendrerit gravida rutrum quisque non tellus. In massa tempor nec feugiat nisl pretium. Cursus risus at ultrices mi tempus imperdiet nulla malesuada.</p>
+                <p style="color: rgb(255, 255, 255); font-size: 17px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Purus ut faucibus pulvinar elementum integer enim neque volutpat. Hendrerit gravida rutrum quisque non tellus. In massa tempor nec feugiat nisl pretium. Cursus risus at ultrices mi tempus imperdiet nulla malesuada.</p>
             </div>
         </div>
     </main>
