--- a/exer3/src/index.html
+++ b/exer3/src/index.html
@@ -16,7 +16,7 @@
         <ul class="flex items-center">
           <li><a href="index.html" class="px-3 py-2 rounded-md text-gray-500 hover:bg-gray-100 hover:text-gray-700">Home</a></li>
           <li><a href="about.html" class="px-3 py-2 rounded-md text-gray-500 hover:bg-gray-100 hover:text-gray-700">About</a></li>
-          <li><a href="#" class="px-3 py-2 rounded-md text-gray-500 hover:bg-gray-100 hover:text-gray-700">Contact</a></li>
+          <li><a href="mailto:advaitsepuri@gmail.com" class="px-3 py-2 rounded-md text-gray-500 hover:bg-gray-100 hover:text-gray-700">Contact</a></li>
           <li></li>
         </ul>
 
